...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginRight="@dimen/default_margin_medium"
            app:srcCompat="@drawable/ic_more_vert_gray_32dp" />

        <ImageButton
            android:id="@+id/imageButtonDeleteDraft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin_content_small"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/delete_draft"
            android:visibility="gone"
...
